load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
load("//tools/bazel/macros:rust.bzl", "rust_library")

rust_library(
    name = "parsing",
    srcs = [
        "lexer.rs",
        "lib.rs",
        "parser/declarations.rs",
        "parser/exports.rs",
        "parser/expressions.rs",
        "parser/imports.rs",
        "parser/mod.rs",
        "parser/recovery.rs",
        "parser/statements.rs",
        "parser/types.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/diagnostics",
        "//compiler/phase_results",
        "//compiler/source",
        "//compiler/syntax",
    ],
)

dependency_enforcement_test(
    name = "parsing_forbidden_dependencies",
    forbidden = [
        "//compiler/binding",
        "//compiler/driver",
        "//compiler/exports",
        "//compiler/file_role_rules",
        "//compiler/package_graph",
        "//compiler/package_symbols",
        "//compiler/packages",
        "//compiler/symbols",
        "//compiler/semantic_types",
        "//compiler/type_analysis",
        "//compiler/visibility",
        "//compiler/workspace",
    ],
    target = ":parsing",
)
